# spring-documentation-mcp-server

./: .env.example  .gitignore  ADDITIONAL_CONTENT.md  CHANGELOG.md  IMPLEMENTATION_SCHEDULER.md  LICENSE  MCP_ANALYSIS.md  README.md  RELEASE.md  THIRD-PARTY-LICENSES.txt  VERSIONS.md  build-container.sh  build.gradle  docker-compose-all.yaml  docker-compose.yml  settings.gradle
capabilities/: CAPABILITY_PLANNING.md  CAPABILITY_PLANNING_HOWTO.md  MCP_MASQUERADING.md  MCP_OPTIMIZATION.md  OPEN_REWRITE_EVALUATION.md
capabilities/general/: MCP_OPTIMIZATION.md  MCP_RESULTS.md
capabilities/release-1.0.0/: SPRING_DOC_EVALUATION.md
capabilities/release-1.2.0/: LANGUAGE_EVOLUTION.md
capabilities/release-1.3.0/: FLAVORS_EVALUATION.md
capabilities/release-1.3.3/: FLAVORS_GROUPS.md
capabilities/release-1.4.0/: INITIALIZR_EVALUATION.md
capabilities/release-1.6.0/: EMBEDDINGS_EVALUATION.md
capabilities/release-1.6.1/: THREADPOOL_SETUP.md
capabilities/release-1.7.0/: WIKI_INTEGRATION.md
capabilities/release-1.8.0/: MCP_STREAMABLE.md
examples/: API_VERSIONING_EXAMPLE.md  CAFFEIN_CAcHING_DEMO.md  LMS_MODULITH_OPENAPI.md  OPENTELEMETRY_LIBRARY.md  RATE_LIMITER_EXAMPLE.md  REST_API_35_EXAMPLE.md  REST_API_40_EXAMPLE.md  TODO_EXAMPLE.md
examples/caffeine-caching-demo/: README.md  mvnw  mvnw.cmd  pom.xml
examples/todo-app-example/: .gitignore  README.md  build.gradle  docker-compose.yml  (+1 more)
init-scripts/: 01-init-extensions.sql
tools/mcp/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
tools/mcp/config/: default.yaml
tools/mcp/src/: __init__.py  config.py
tools/mcp/src/client/: __init__.py  mcp_client.py  sse_client.py
tools/mcp/src/models/: __init__.py  mcp_messages.py  test_results.py
tools/mcp/src/runners/: __init__.py
tools/mcp/src/utils/: __init__.py
tools/mcp/tests/: __init__.py  conftest.py  test_version_compatibility.py
tools/mcp/tests/optimization/: __init__.py  test_query_optimization.py
tools/mcp/tests/performance/: __init__.py  test_tool_performance.py
tools/mcp/tests/stability/: __init__.py  test_mcp_client.py  test_protocol_compliance.py  test_sse_connection.py
tools/mcp/tests/stress/: __init__.py  test_all_tools_stress.py  test_extended_stress.py
usecases/: Documentation.md  MCP_Improvement_Documentation.md  test_documentation_tools.py
(+543 files in other folders)
